fixed: the overflow issue

--- a/css/style.css
+++ b/css/style.css
@@ -169,9 +169,13 @@ body::-webkit-scrollbar {
     font-family: "Protest Strike", sans-serif;
     font-weight: 400;
     font-style: normal;
-    font-size: 6rem;
+    font-size: 6.5rem;
     text-align: center;
     margin: 50px 0;
+    color: rgba(201, 201, 12, 0.142);
+    -webkit-text-stroke: rgb(242, 255, 0);
+    -webkit-text-stroke-width: 1.6px;
+    letter-spacing: 5px;
 }
 
 /* .main-intro h3 {
@@ -181,13 +185,17 @@ body::-webkit-scrollbar {
     width: 77%;
     align-items: center;
 } */
+/* #row-description-main-header {
+    width: 73%;
+} */
 
 #description {
     text-align: center;
-    font-size: 1.9em;
+    font-size: 2em;
     margin: 2em 0;
     font-family: "Raleway", sans-serif;
     color: rgb(184, 184, 184);
+    line-height: 30px;
 
 }
 
@@ -311,14 +319,86 @@ body::-webkit-scrollbar {
 
 
 
+/* codess for contact us html file */
+
+.contact-us {
+    width: 80%;
+    margin: auto;
+
+}
+
+.contact-col {
+    flex-basis: 48%;
+    margin-bottom: 30px;
+}
+
+.contact-col div {
+    display: flex;
+    align-items: center;
+    margin-bottom: 40px;
+}
+
+.contact-col div i {
+    font-size: 28px;
+    color: #b50d66;
+    margin: 10px;
+    margin-right: 30px;
+}
+
+.contact-col div p {
+    padding: 0;
+}
+
+.contact-col div h5 {
+    font-size: 20px;
+    margin-bottom: 5px;
+    color: #555;
+    font-weight: 400;
+}
+
+.contact-col input,
+.contact-col textarea {
+    width: 100%;
+    padding: 15px;
+    margin-bottom: 17px;
+    outline: none;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+}
+
+.footer {
+    width: 100%;
+    text-align: center;
+    padding: 10px 0 30px;
+}
+
+.footer h4 {
+    margin-bottom: 25px;
+    margin-top: 20px;
+    font-weight: 800;
+}
+
+.icons i {
+    color: #b2085d;
+    margin: 0 13px;
+    cursor: pointer;
+    padding: 18px 0;
+    font-size: 25px;
+}
+
+.fa-heart {
+    color: #b50d66;
+}
+
 
 
 
 
 /* code for main body starts here */
 
-#wrapper{
-    background: #1a0626;}
+#wrapper {
+    background: #1a0626;
+}
 
 
 
@@ -524,96 +604,40 @@ body::-webkit-scrollbar {
     }
 
 }
-/* codess for contact us html file */
-/*code for contact us page-harshitha*/
-.hero-btn{
-    padding: 10px 20px;
-    font-weight: 500;
-    color:white;
-    border-radius: 6px;
-    background: radial-gradient(ellipse farthest-corner at bottom right, #FF00CC 20%, #6A04B7 93%);
-    scale: 0.98;
-    transition: 0.3s;
-}
 
-.contact_sec{
-    background:#1a0626 ;
-    padding-top: 30px;
-    color: white;
-}
+@media (max-width: 630px) {
+    .main-intro {
+        height: 900px;
+    }
 
-.contact-us {
-    width: 80%;
-    margin: auto;
-}
+    .main-intro h1 {
+        font-size: 36px;
+        margin-bottom: 20px;
+        margin-top: 40px;
+    }
 
-.contact-col {
-    flex-basis: 48%;
-    margin-bottom: 30px;
-    border-radius:;
-}
+    #description {
+        margin-top: 19px;
+        text-align: center;
+        line-height: 29px;
+        overflow-x: hidden;
+        padding-right: 0;
+        padding-left: 200px;
+    }
 
-.contact-col div {
-    display: flex;
-    align-items: center;
-    margin-bottom: 40px;
-    
-}
+    #description {
+        padding: 0px 15px 0 30px;
+    }
 
-.contact-col div i {
-    font-size: 28px;
-    color: #b50d66;
-    margin: 10px;
-    margin-right: 30px;
-}
+    #row-description-main-header {
+        margin-right: 0;
+    }
 
-.contact-col div p {
-    padding: 0;
-}
+    #resizing-in-smaller-device {
+        flex: 0 0 78.333333%;
+        max-width: 100%;
+    }
 
-.contact-col div h5 {
-    font-size: 20px;
-    margin-bottom: 5px;
-    color: white;
-    font-weight: 400;
-}
 
-.contact-col input,
-.contact-col textarea {
-    width: 100%;
-    padding: 15px;
-    margin-bottom: 17px;
-    outline: none;
-    border: 1px solid #ccc;
-    box-sizing: border-box;
-    border-radius: 6px;
-}
 
-.footer {
-    width: 100%;
-    text-align: center;
-    padding:50px;
-    background: black ;
-    color: white;
 }
-
-.footer h4 {
-    margin-bottom: 25px;
-    margin-top: 20px;
-    font-weight: 800;
-    color: white;
-    font-size: 25px;
-}
-
-.icons i {
-    color: #b2085d;
-    margin: 0 13px;
-    cursor: pointer;
-    padding: 18px 0;
-    font-size: 25px;
-}
-
-.fa-heart {
-    color: #b50d66;
-}
-
